--- a/index.html
+++ b/index.html
@@ -3,27 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Virendra Pawar | Full-Stack Developer &amp; ML Engineer</title>
-    <meta name="description" content="Portfolio of Virendra Pawar - Full-Stack Developer, ML/AI Engineer specializing in backend APIs, cloud systems, and intelligent applications">
+    <title>Virendra Pawar | Full-Stack Developer &amp; AI/ML Engineer</title>
+    <meta name="description" content="Portfolio of Virendra Pawar - Full-Stack Developer, AI/ML Engineer specializing in backend APIs, cloud systems, and intelligent applications">
     <meta name="author" content="Virendra Pawar" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    
-    
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:title" content="Virendra Pawar | Full-Stack Developer &amp; ML Engineer">
-  <meta name="twitter:title" content="Virendra Pawar | Full-Stack Developer &amp; ML Engineer">
-  <meta property="og:description" content="Portfolio of Virendra Pawar - Full-Stack Developer, ML/AI Engineer specializing in backend APIs, cloud systems, and intelligent applications">
-  <meta name="twitter:description" content="Portfolio of Virendra Pawar - Full-Stack Developer, ML/AI Engineer specializing in backend APIs, cloud systems, and intelligent applications">
-  <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/ykeXkDKOMkPattlxQo8EQZ1mzAs1/uploads/1763492181061-brain icon.png">
-</head>
+    <meta property="og:title" content="Virendra Pawar | Full-Stack Developer &amp; AI/ML Engineer">
+    <meta name="twitter:title" content="Virendra Pawar | Full-Stack Developer &amp; AI/ML Engineer">
+    <meta property="og:description" content="Portfolio of Virendra Pawar - Full-Stack Developer, AI/ML Engineer specializing in backend APIs, cloud systems, and intelligent applications">
+    <meta name="twitter:description" content="Portfolio of Virendra Pawar - Full-Stack Developer, AI/ML Engineer specializing in backend APIs, cloud systems, and intelligent applications">
+
+    <!-- Favicon set (cache-busted to force update) -->
+    <link rel="icon" href="/favicon.ico?v=2" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
+    <link rel="manifest" href="/site.webmanifest?v=2" />
+
+  </head>
 
   <body>
     <div id="root"></div>
